--- a/EarlyBinding/CMakeLists.txt
+++ b/EarlyBinding/CMakeLists.txt
@@ -24,7 +24,8 @@ foreach(format ${IFC_FORMATS})
 	if(EXISTS ${CMAKE_BINARY_DIR}/EarlyBinding/${format})
 		add_subdirectory(${CMAKE_BINARY_DIR}/EarlyBinding/${format} ${CMAKE_BINARY_DIR}/EarlyBinding/${format})
         set_target_properties(OpenInfraPlatform.${format}.Types PROPERTIES FOLDER "OpenInfraPlatform/EarlyBinding/${format}")
-		set_target_properties(OpenInfraPlatform.${format} PROPERTIES FOLDER "OpenInfraPlatform/EarlyBinding/${format}")
+        set_target_properties(OpenInfraPlatform.${format}.NotRoot PROPERTIES FOLDER "OpenInfraPlatform/EarlyBinding/${format}")
+		set_target_properties(OpenInfraPlatform.${format}.Main PROPERTIES FOLDER "OpenInfraPlatform/EarlyBinding/${format}")
 		
 	elseif()
 		message(WARNING "Files for format ${format} not found.")
@@ -35,7 +36,8 @@ macro(add_unit_test_generated schema)
     if(EXISTS ${CMAKE_BINARY_DIR}/UnitTests/Generator/${schema}/Generated/${schema})
         add_subdirectory(${CMAKE_BINARY_DIR}/UnitTests/Generator/${schema}/Generated/${schema} ${CMAKE_BINARY_DIR}/UnitTests/Generator/${schema}/Generated/${schema})
         set_target_properties(OpenInfraPlatform.${schema}.Types PROPERTIES FOLDER "OpenInfraPlatform/UnitTests/Generator/${schema}")
-        set_target_properties(OpenInfraPlatform.${schema} PROPERTIES FOLDER "OpenInfraPlatform/UnitTests/Generator/${schema}")
+        set_target_properties(OpenInfraPlatform.${schema}.NotRoot PROPERTIES FOLDER "OpenInfraPlatform/UnitTests/Generator/${schema}")
+        set_target_properties(OpenInfraPlatform.${schema}.Main PROPERTIES FOLDER "OpenInfraPlatform/UnitTests/Generator/${schema}")
     endif()
 endmacro()
 
