Changed the way files' paths and includes are generated

--- a/EarlyBinding/CMakeLists.txt
+++ b/EarlyBinding/CMakeLists.txt
@@ -23,9 +23,9 @@ foreach(format ${IFC_FORMATS})
 	message(STATUS "Format ${format} found.")
 	if(EXISTS ${CMAKE_BINARY_DIR}/EarlyBinding/${format})
 		add_subdirectory(${CMAKE_BINARY_DIR}/EarlyBinding/${format} ${CMAKE_BINARY_DIR}/EarlyBinding/${format})
-        set_target_properties(OpenInfraPlatform.${format}.Types PROPERTIES FOLDER "OpenInfraPlatform/EarlyBinding/${format}")
-        set_target_properties(OpenInfraPlatform.${format}.NotRoot PROPERTIES FOLDER "OpenInfraPlatform/EarlyBinding/${format}")
-		set_target_properties(OpenInfraPlatform.${format}.Main PROPERTIES FOLDER "OpenInfraPlatform/EarlyBinding/${format}")
+        set_target_properties(OpenInfraPlatform.${format}.Bot PROPERTIES FOLDER "OpenInfraPlatform/EarlyBinding/${format}")
+        set_target_properties(OpenInfraPlatform.${format}.Mid PROPERTIES FOLDER "OpenInfraPlatform/EarlyBinding/${format}")
+        set_target_properties(OpenInfraPlatform.${format}.Top PROPERTIES FOLDER "OpenInfraPlatform/EarlyBinding/${format}")
 		
 	elseif()
 		message(WARNING "Files for format ${format} not found.")
@@ -35,9 +35,9 @@ endforeach()
 macro(add_unit_test_generated schema)
     if(EXISTS ${CMAKE_BINARY_DIR}/UnitTests/Generator/${schema}/Generated/${schema})
         add_subdirectory(${CMAKE_BINARY_DIR}/UnitTests/Generator/${schema}/Generated/${schema} ${CMAKE_BINARY_DIR}/UnitTests/Generator/${schema}/Generated/${schema})
-        set_target_properties(OpenInfraPlatform.${schema}.Types PROPERTIES FOLDER "OpenInfraPlatform/UnitTests/Generator/${schema}")
-        set_target_properties(OpenInfraPlatform.${schema}.NotRoot PROPERTIES FOLDER "OpenInfraPlatform/UnitTests/Generator/${schema}")
-        set_target_properties(OpenInfraPlatform.${schema}.Main PROPERTIES FOLDER "OpenInfraPlatform/UnitTests/Generator/${schema}")
+        set_target_properties(OpenInfraPlatform.${schema}.Bot PROPERTIES FOLDER "OpenInfraPlatform/UnitTests/Generator/${schema}")
+        set_target_properties(OpenInfraPlatform.${schema}.Mid PROPERTIES FOLDER "OpenInfraPlatform/UnitTests/Generator/${schema}")
+        set_target_properties(OpenInfraPlatform.${schema}.Top PROPERTIES FOLDER "OpenInfraPlatform/UnitTests/Generator/${schema}")
     endif()
 endmacro()
 
