Corrected project attributes of .Zero

--- a/EarlyBinding/CMakeLists.txt
+++ b/EarlyBinding/CMakeLists.txt
@@ -23,6 +23,7 @@ foreach(format ${IFC_FORMATS})
 	message(STATUS "Format ${format} found.")
 	if(EXISTS ${CMAKE_BINARY_DIR}/EarlyBinding/${format})
 		add_subdirectory(${CMAKE_BINARY_DIR}/EarlyBinding/${format} ${CMAKE_BINARY_DIR}/EarlyBinding/${format})
+        set_target_properties(OpenInfraPlatform.${format}.Zero PROPERTIES FOLDER "OpenInfraPlatform/EarlyBinding/${format}")
         set_target_properties(OpenInfraPlatform.${format}.Bot PROPERTIES FOLDER "OpenInfraPlatform/EarlyBinding/${format}")
         set_target_properties(OpenInfraPlatform.${format}.Mid PROPERTIES FOLDER "OpenInfraPlatform/EarlyBinding/${format}")
         set_target_properties(OpenInfraPlatform.${format}.Top PROPERTIES FOLDER "OpenInfraPlatform/EarlyBinding/${format}")
@@ -35,6 +36,7 @@ endforeach()
 macro(add_unit_test_generated schema)
     if(EXISTS ${CMAKE_BINARY_DIR}/UnitTests/Generator/${schema}/Generated/${schema})
         add_subdirectory(${CMAKE_BINARY_DIR}/UnitTests/Generator/${schema}/Generated/${schema} ${CMAKE_BINARY_DIR}/UnitTests/Generator/${schema}/Generated/${schema})
+        set_target_properties(OpenInfraPlatform.${schema}.Zero PROPERTIES FOLDER "OpenInfraPlatform/UnitTests/Generator/${schema}")
         set_target_properties(OpenInfraPlatform.${schema}.Bot PROPERTIES FOLDER "OpenInfraPlatform/UnitTests/Generator/${schema}")
         set_target_properties(OpenInfraPlatform.${schema}.Mid PROPERTIES FOLDER "OpenInfraPlatform/UnitTests/Generator/${schema}")
         set_target_properties(OpenInfraPlatform.${schema}.Top PROPERTIES FOLDER "OpenInfraPlatform/UnitTests/Generator/${schema}")
