Adapting the generator to produce API defines.

--- a/EarlyBinding/CMakeLists.txt
+++ b/EarlyBinding/CMakeLists.txt
@@ -57,6 +57,7 @@ foreach(format ${IFC_FORMATS})
         set_target_properties(OpenInfraPlatform.${format}.Bot PROPERTIES FOLDER "OpenInfraPlatform/EarlyBinding/${format}")
         set_target_properties(OpenInfraPlatform.${format}.Mid PROPERTIES FOLDER "OpenInfraPlatform/EarlyBinding/${format}")
         set_target_properties(OpenInfraPlatform.${format}.Top PROPERTIES FOLDER "OpenInfraPlatform/EarlyBinding/${format}")
+        set_target_properties(OpenInfraPlatform.${format} PROPERTIES FOLDER "OpenInfraPlatform/EarlyBinding/${format}")
 		
 	elseif()
 		message(WARNING "Files for format ${format} not found.")
@@ -70,6 +71,7 @@ macro(add_unit_test_generated schema)
         set_target_properties(OpenInfraPlatform.${schema}.Bot PROPERTIES FOLDER "OpenInfraPlatform/UnitTests/Generator/${schema}")
         set_target_properties(OpenInfraPlatform.${schema}.Mid PROPERTIES FOLDER "OpenInfraPlatform/UnitTests/Generator/${schema}")
         set_target_properties(OpenInfraPlatform.${schema}.Top PROPERTIES FOLDER "OpenInfraPlatform/UnitTests/Generator/${schema}")
+        set_target_properties(OpenInfraPlatform.${schema} PROPERTIES FOLDER "OpenInfraPlatform/UnitTests/Generator/${schema}")
     endif()
 endmacro()
 
