Split .Top library in rooted and not rooted

--- a/EarlyBinding/CMakeLists.txt
+++ b/EarlyBinding/CMakeLists.txt
@@ -51,7 +51,8 @@ foreach(format ${IFC_FORMATS})
         set_target_properties(OpenInfraPlatform.${format}.Zero PROPERTIES FOLDER "OpenInfraPlatform/EarlyBinding/${format}")
         set_target_properties(OpenInfraPlatform.${format}.Bot PROPERTIES FOLDER "OpenInfraPlatform/EarlyBinding/${format}")
         set_target_properties(OpenInfraPlatform.${format}.Mid PROPERTIES FOLDER "OpenInfraPlatform/EarlyBinding/${format}")
-        set_target_properties(OpenInfraPlatform.${format}.Top PROPERTIES FOLDER "OpenInfraPlatform/EarlyBinding/${format}")
+        set_target_properties(OpenInfraPlatform.${format}.TopRooted PROPERTIES FOLDER "OpenInfraPlatform/EarlyBinding/${format}")
+        set_target_properties(OpenInfraPlatform.${format}.TopNotRooted PROPERTIES FOLDER "OpenInfraPlatform/EarlyBinding/${format}")
         set_target_properties(OpenInfraPlatform.${format} PROPERTIES FOLDER "OpenInfraPlatform/EarlyBinding/${format}")
 		
 	elseif()
@@ -65,7 +66,8 @@ macro(add_unit_test_generated schema)
         set_target_properties(OpenInfraPlatform.${schema}.Zero PROPERTIES FOLDER "OpenInfraPlatform/UnitTests/Generator/${schema}")
         set_target_properties(OpenInfraPlatform.${schema}.Bot PROPERTIES FOLDER "OpenInfraPlatform/UnitTests/Generator/${schema}")
         set_target_properties(OpenInfraPlatform.${schema}.Mid PROPERTIES FOLDER "OpenInfraPlatform/UnitTests/Generator/${schema}")
-        set_target_properties(OpenInfraPlatform.${schema}.Top PROPERTIES FOLDER "OpenInfraPlatform/UnitTests/Generator/${schema}")
+        set_target_properties(OpenInfraPlatform.${schema}.TopRooted PROPERTIES FOLDER "OpenInfraPlatform/UnitTests/Generator/${schema}")
+        set_target_properties(OpenInfraPlatform.${schema}.TopNotRooted PROPERTIES FOLDER "OpenInfraPlatform/UnitTests/Generator/${schema}")
         set_target_properties(OpenInfraPlatform.${schema} PROPERTIES FOLDER "OpenInfraPlatform/UnitTests/Generator/${schema}")
     endif()
 endmacro()
