--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -156,8 +156,8 @@ endif()
 
 FetchContent_Declare(
 	eigen
-	GIT_REPOSITORY https://github.com/eigenteam/eigen-git-mirror.git
-	GIT_TAG 3.3.7
+	GIT_REPOSITORY https://gitlab.com/libeigen/eigen.git
+	GIT_TAG 3.3.9
 )
   
 FetchContent_MakeAvailable(eigen)
