organizing the solution a bit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -693,9 +693,10 @@ set_target_properties(OpenInfraPlatform.ExpressBindingGenerator			PROPERTIES FOL
 # clean up the solution a bit
 set_target_properties(glew_s PROPERTIES FOLDER "ThirdParty")
 set_target_properties(tinyxml2 PROPERTIES FOLDER "ThirdParty")
-set_target_properties(StackWalker PROPERTIES FOLDER "ThirdParty")
-set_target_properties(StackWalker_test PROPERTIES FOLDER "ThirdParty")
-set_target_properties(tinyformat_test PROPERTIES FOLDER "ThirdParty")
+set_target_properties(StackWalker PROPERTIES FOLDER "ThirdParty/StackWalker")
+set_target_properties(StackWalker_test PROPERTIES FOLDER "ThirdParty/StackWalker")
+set_target_properties(tinyformat_test PROPERTIES FOLDER "ThirdParty/TinyFomrat")
+set_target_properties(testall PROPERTIES FOLDER "ThirdParty/TinyFomrat")
 
 # Currently not included. 
 #set_target_properties(OpenInfraPlatform.CommandLineUtilities		PROPERTIES FOLDER "OpenInfraPlatform")
