--- a/UnitTests/CMakeLists.txt
+++ b/UnitTests/CMakeLists.txt
@@ -37,7 +37,9 @@ endif()
 file(GLOB OpenInfraPlatform_UnitTests_Source *.cpp)
 
 add_subdirectory(Generator)
+add_subdirectory(Off)
 add_subdirectory(Schemas)
 add_subdirectory(Utilities)
+
 
 
