Renaming the IfcGeometryModelRenderer to GeometryModelRenderer (since it will also support off files and point clouds quite soon)

--- a/UnitTests/Utilities/GeometryModelRenderer/CMakeLists.txt
+++ b/UnitTests/Utilities/GeometryModelRenderer/CMakeLists.txt
@@ -1,5 +1,5 @@
 #
-#    Copyright (c) 2020 Technical University of Munich
+#    Copyright (c) 2021 Technical University of Munich
 #    Chair of Computational Modeling and Simulation.
 #
 #    TUM Open Infra Platform is free software; you can redistribute it and/or modify
@@ -15,23 +15,23 @@
 #    along with this program. If not, see <http://www.gnu.org/licenses/>.
 #
 
-project(IfcGeometryModelRenderer)
+project(GeometryModelRenderer)
 
 set(CMAKE_AUTOMOC OFF)
 
-file(GLOB OpenInfraPlatform_UnitTests_Utilities_IfcGeometryModelRenderer_Source src/*.*)
+file(GLOB OpenInfraPlatform_UnitTests_Utilities_GeometryModelRenderer_Source src/*.*)
 
-source_group(src FILES ${OpenInfraPlatform_UnitTests_Utilities_IfcGeometryModelRenderer_Source})
+source_group(src FILES ${OpenInfraPlatform_UnitTests_Utilities_GeometryModelRenderer_Source})
 
-add_library(IfcGeometryModelRenderer STATIC ${OpenInfraPlatform_UnitTests_Utilities_IfcGeometryModelRenderer_Source})
+add_library(GeometryModelRenderer STATIC ${OpenInfraPlatform_UnitTests_Utilities_GeometryModelRenderer_Source})
 
 
-target_include_directories(IfcGeometryModelRenderer
+target_include_directories(GeometryModelRenderer
 	PUBLIC
 		src
 )
 
-target_link_libraries(IfcGeometryModelRenderer
+target_link_libraries(GeometryModelRenderer
     PRIVATE
         OpenInfraPlatform.Rendering
         BlueFramework.Engine
@@ -41,4 +41,4 @@ target_link_libraries(IfcGeometryModelRenderer
         Boost::filesystem
 )
 
-set_target_properties(IfcGeometryModelRenderer PROPERTIES FOLDER "OpenInfraPlatform/UnitTests/Utilities")
+set_target_properties(GeometryModelRenderer PROPERTIES FOLDER "OpenInfraPlatform/UnitTests/Utilities")
