--- a/UnitTests/Utilities/CMakeLists.txt
+++ b/UnitTests/Utilities/CMakeLists.txt
@@ -1,5 +1,5 @@
 #
-#    Copyright (c) 2020 Technical University of Munich
+#    Copyright (c) 2021 Technical University of Munich
 #    Chair of Computational Modeling and Simulation.
 #
 #    TUM Open Infra Platform is free software; you can redistribute it and/or modify
@@ -15,4 +15,4 @@
 #    along with this program. If not, see <http://www.gnu.org/licenses/>.
 #
 
-add_subdirectory(IfcGeometryModelRenderer)
+add_subdirectory(GeometryModelRenderer)
